Closed Bug 296261 Opened 20 years ago Closed 20 years ago

nsIAccessible::GetPreviousSibling regression

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access)

Attachments

(1 file)

This is a major regression that went unnoticed for a while, because we have no testing that used GetPreviousSibling(). The screen readers that are working with us don't use it.
Attachment #185050 - Flags: review?(parente)
Comment on attachment 185050 [details] [diff] [review] Fix loop to break when it should Note that I removed the if !mParent because it doesn't really optimize anything. GetParent() already uses mParent if it has been cached, so there is no need.
Attachment #185050 - Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #185050 - Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Attachment #185050 - Flags: review?(parente) → review+
Attachment #185050 - Flags: approval1.8b3?
Comment on attachment 185050 [details] [diff] [review] Fix loop to break when it should a=chofmann
Attachment #185050 - Flags: approval1.8b3? → approval1.8b3+
Checking in accessible/src/base/nsAccessible.cpp; /cvsroot/mozilla/accessible/src/base/nsAccessible.cpp,v <-- nsAccessible.cpp new revision: 1.151; previous revision: 1.150 done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: