Bug 296261. Fix nsIAccessible::GetPreviousSibling regression. r=parente, sr=neil, a=chofmann